--- a/app/src/main/res/layout/fragment_rss_item.xml
+++ b/app/src/main/res/layout/fragment_rss_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="sorry_empty"/>
+        android:text="@string/sorry_empty"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
