Change item icons

--- a/app/src/main/res/layout/fragment_rss_item.xml
+++ b/app/src/main/res/layout/fragment_rss_item.xml
@@ -30,7 +30,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="16dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@drawable/habr_icon_small"/>
 
             <TextView
                 android:id="@+id/item_title"
